GC调整 对一些异常的信息的返回进行修正 完善mongo与redis的连接信息